--- a/client/src/components/Keyboard/Keyboard.css
+++ b/client/src/components/Keyboard/Keyboard.css
@@ -1,7 +1,18 @@
 .keyboard {
-  width: 100vw;
-  height: 100vh;
   display: flex;
+  width: 50vw;
+  max-width: 50vw;
+  height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.keyboard-mobile {
+  display: flex;
+  width: 85vw;
+  height: 100vh;
+  /*height: 800px; */
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -9,16 +20,15 @@
 
 .keyboard_btn-list {
   display: flex;
-  margin-bottom: 5px;
+  width: 100%;
+
 }
 
 .keyboard_text {
   font-weight: 700;
-  font-size: calc(10px + 4vmin);
+  font-size: 5vw;
   margin-bottom: 30px;
+  white-space: break-spaces;
 }
 
-.keyboard_btn-list:last-child {
-  margin-right: 0;
-  margin-bottom: 0;
-}
+
